// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GistReindexButton — snapshot dos 4 estados visuais > 1. estado inicial — botão 'Executar REINDEX', sem indicador > gist-reindex-button-initial 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap items-center gap-3"
  >
    <div
      data-open="false"
      data-testid="alert-dialog"
    >
      <button
        class="inline-flex items-center gap-1.5 rounded-lg border border-red-300 bg-red-600 px-3 py-1.5 text-[11px] font-medium text-white shadow-sm transition-colors hover:bg-red-700 disabled:cursor-not-allowed disabled:opacity-50"
        type="button"
      >
        <span
          data-class="size-3.5"
          data-testid="lucide-icon"
        />
        Executar REINDEX
      </button>
      <div
        data-testid="alert-dialog-content"
      >
        <div>
          <div>
            ⚠️ Executar REINDEX nos índices GiST?
          </div>
          <div>
            <p>
              Esta ação irá reconstruir 
              <strong>
                3 índices
              </strong>
               espaciais GiST do PostGIS:
            </p>
            <ul
              class="list-inside list-disc space-y-1 text-[13px]"
            >
              <li>
                <code
                  class="bg-muted rounded px-1 py-0.5 font-mono text-[11px]"
                >
                  idx_user_location_gist
                </code>
                 — 
                localização de usuários
              </li>
              <li>
                <code
                  class="bg-muted rounded px-1 py-0.5 font-mono text-[11px]"
                >
                  idx_booking_location_gist
                </code>
                 — 
                localização de bookings
              </li>
              <li>
                <code
                  class="bg-muted rounded px-1 py-0.5 font-mono text-[11px]"
                >
                  idx_quoterequest_location_gist
                </code>
                 — 
                localização de quote requests
              </li>
            </ul>
            <p
              class="text-amber-600 dark:text-amber-400"
            >
              ⏱ A operação usa REINDEX CONCURRENTLY e não bloqueia a tabela durante a execução. Pode levar alguns segundos dependendo do volume de dados.
            </p>
          </div>
        </div>
        <div
          data-testid="alert-dialog-footer"
        >
          <button
            type="button"
          >
            Cancelar
          </button>
          <button
            data-testid="alert-dialog-action"
            type="button"
          >
            Sim, executar REINDEX
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GistReindexButton — snapshot dos 4 estados visuais > 2. reindexando — botão 'Reindexando…', indicador loading com spinner > gist-reindex-button-reindexing 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap items-center gap-3"
  >
    <div
      data-open="false"
      data-testid="alert-dialog"
    >
      <button
        class="inline-flex items-center gap-1.5 rounded-lg border border-red-300 bg-red-600 px-3 py-1.5 text-[11px] font-medium text-white shadow-sm transition-colors hover:bg-red-700 disabled:cursor-not-allowed disabled:opacity-50"
        disabled=""
        type="button"
      >
        <span
          data-class="size-3.5"
          data-testid="lucide-icon"
        />
        Reindexando…
      </button>
      <div
        data-testid="alert-dialog-content"
      >
        <div>
          <div>
            ⚠️ Executar REINDEX nos índices GiST?
          </div>
          <div>
            <p>
              Esta ação irá reconstruir 
              <strong>
                3 índices
              </strong>
               espaciais GiST do PostGIS:
            </p>
            <ul
              class="list-inside list-disc space-y-1 text-[13px]"
            >
              <li>
                <code
                  class="bg-muted rounded px-1 py-0.5 font-mono text-[11px]"
                >
                  idx_user_location_gist
                </code>
                 — 
                localização de usuários
              </li>
              <li>
                <code
                  class="bg-muted rounded px-1 py-0.5 font-mono text-[11px]"
                >
                  idx_booking_location_gist
                </code>
                 — 
                localização de bookings
              </li>
              <li>
                <code
                  class="bg-muted rounded px-1 py-0.5 font-mono text-[11px]"
                >
                  idx_quoterequest_location_gist
                </code>
                 — 
                localização de quote requests
              </li>
            </ul>
            <p
              class="text-amber-600 dark:text-amber-400"
            >
              ⏱ A operação usa REINDEX CONCURRENTLY e não bloqueia a tabela durante a execução. Pode levar alguns segundos dependendo do volume de dados.
            </p>
          </div>
        </div>
        <div
          data-testid="alert-dialog-footer"
        >
          <button
            type="button"
          >
            Cancelar
          </button>
          <button
            data-testid="alert-dialog-action"
            disabled=""
            type="button"
          >
            Executando…
          </button>
        </div>
      </div>
    </div>
    <span
      aria-live="polite"
      class="inline-flex items-center gap-1.5 text-xs opacity-100 transition-opacity duration-300 text-muted-foreground"
    >
      <span
        data-class="size-3 animate-spin"
        data-testid="lucide-icon"
      />
      <span>
        Reindexando índices…
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`GistReindexButton — snapshot dos 4 estados visuais > 3. sucesso — indicador verde com resultado da API > gist-reindex-button-success 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap items-center gap-3"
  >
    <div
      data-open="false"
      data-testid="alert-dialog"
    >
      <button
        class="inline-flex items-center gap-1.5 rounded-lg border border-red-300 bg-red-600 px-3 py-1.5 text-[11px] font-medium text-white shadow-sm transition-colors hover:bg-red-700 disabled:cursor-not-allowed disabled:opacity-50"
        type="button"
      >
        <span
          data-class="size-3.5"
          data-testid="lucide-icon"
        />
        Executar REINDEX
      </button>
      <div
        data-testid="alert-dialog-content"
      >
        <div>
          <div>
            ⚠️ Executar REINDEX nos índices GiST?
          </div>
          <div>
            <p>
              Esta ação irá reconstruir 
              <strong>
                3 índices
              </strong>
               espaciais GiST do PostGIS:
            </p>
            <ul
              class="list-inside list-disc space-y-1 text-[13px]"
            >
              <li>
                <code
                  class="bg-muted rounded px-1 py-0.5 font-mono text-[11px]"
                >
                  idx_user_location_gist
                </code>
                 — 
                localização de usuários
              </li>
              <li>
                <code
                  class="bg-muted rounded px-1 py-0.5 font-mono text-[11px]"
                >
                  idx_booking_location_gist
                </code>
                 — 
                localização de bookings
              </li>
              <li>
                <code
                  class="bg-muted rounded px-1 py-0.5 font-mono text-[11px]"
                >
                  idx_quoterequest_location_gist
                </code>
                 — 
                localização de quote requests
              </li>
            </ul>
            <p
              class="text-amber-600 dark:text-amber-400"
            >
              ⏱ A operação usa REINDEX CONCURRENTLY e não bloqueia a tabela durante a execução. Pode levar alguns segundos dependendo do volume de dados.
            </p>
          </div>
        </div>
        <div
          data-testid="alert-dialog-footer"
        >
          <button
            type="button"
          >
            Cancelar
          </button>
          <button
            data-testid="alert-dialog-action"
            type="button"
          >
            Sim, executar REINDEX
          </button>
        </div>
      </div>
    </div>
    <span
      aria-live="assertive"
      class="inline-flex items-center gap-1.5 text-xs opacity-100 transition-opacity duration-300 text-emerald-600 dark:text-emerald-400"
    >
      <span
        data-class="size-3.5 shrink-0"
        data-testid="lucide-icon"
      />
      <span>
        3/3 índices reindexados com sucesso. (2122ms) — idx_user_location_gist: 1234ms · idx_booking_location_gist: 567ms · idx_quoterequest_location_gist: 321ms
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`GistReindexButton — snapshot dos 4 estados visuais > 4. isRefetching — indicador 'Atualizando métricas…' com spinner, botão inalterado > gist-reindex-button-refetching 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap items-center gap-3"
  >
    <div
      data-open="false"
      data-testid="alert-dialog"
    >
      <button
        class="inline-flex items-center gap-1.5 rounded-lg border border-red-300 bg-red-600 px-3 py-1.5 text-[11px] font-medium text-white shadow-sm transition-colors hover:bg-red-700 disabled:cursor-not-allowed disabled:opacity-50"
        type="button"
      >
        <span
          data-class="size-3.5"
          data-testid="lucide-icon"
        />
        Executar REINDEX
      </button>
      <div
        data-testid="alert-dialog-content"
      >
        <div>
          <div>
            ⚠️ Executar REINDEX nos índices GiST?
          </div>
          <div>
            <p>
              Esta ação irá reconstruir 
              <strong>
                3 índices
              </strong>
               espaciais GiST do PostGIS:
            </p>
            <ul
              class="list-inside list-disc space-y-1 text-[13px]"
            >
              <li>
                <code
                  class="bg-muted rounded px-1 py-0.5 font-mono text-[11px]"
                >
                  idx_user_location_gist
                </code>
                 — 
                localização de usuários
              </li>
              <li>
                <code
                  class="bg-muted rounded px-1 py-0.5 font-mono text-[11px]"
                >
                  idx_booking_location_gist
                </code>
                 — 
                localização de bookings
              </li>
              <li>
                <code
                  class="bg-muted rounded px-1 py-0.5 font-mono text-[11px]"
                >
                  idx_quoterequest_location_gist
                </code>
                 — 
                localização de quote requests
              </li>
            </ul>
            <p
              class="text-amber-600 dark:text-amber-400"
            >
              ⏱ A operação usa REINDEX CONCURRENTLY e não bloqueia a tabela durante a execução. Pode levar alguns segundos dependendo do volume de dados.
            </p>
          </div>
        </div>
        <div
          data-testid="alert-dialog-footer"
        >
          <button
            type="button"
          >
            Cancelar
          </button>
          <button
            data-testid="alert-dialog-action"
            type="button"
          >
            Sim, executar REINDEX
          </button>
        </div>
      </div>
    </div>
    <span
      aria-live="polite"
      class="inline-flex items-center gap-1.5 text-xs opacity-100 transition-opacity duration-300 text-muted-foreground"
    >
      <span
        data-class="size-3 animate-spin"
        data-testid="lucide-icon"
      />
      <span>
        Atualizando métricas…
      </span>
    </span>
  </div>
</DocumentFragment>
`;
